src/test/run-pass/panic-runtime/link-to-abort.rs
// run-pass

// compile-flags:-C panic=abort
// no-prefer-dynamic
// ignore-macos

#![feature(panic_abort)]

extern crate panic_abort;

fn main() {}
